--- a/_sass/custom/_web-typography.scss
+++ b/_sass/custom/_web-typography.scss
@@ -61,6 +61,7 @@
 }
 
 #footer {
+    background: linear-gradient(270deg, $color-accent 40%, white 100%); 
     .footer-content {
         display: flex;
         font-size: 0.7em;
@@ -69,12 +70,17 @@
         max-width: none;
         .logos {
             display: flex;
-            width: 8em;
             .logo {
                 display: inline-block;
-                height: 2em;
+                height: 3em;
                 margin-right: 1em;
+                img {
+                    max-height: 100%;
+                }
             }
+        }
+        p {
+            text-align: right;
         }
     }
 }
