--- a/_sass/web.scss
+++ b/_sass/web.scss
@@ -109,7 +109,7 @@ $text-divider-image-width: $line-height-default * 2 !default;
 // Footer
 $footer-text-color: white !default;
 $footer-background-color: $color-accent !default;
-$footer-border-color: $color-accent !default;
+$footer-border-color: $color-light !default;
 
 // Website masthead
 $masthead-text-color: $color-accent !default;
